--- a/helloworld-chart/templates/service.yaml
+++ b/helloworld-chart/templates/service.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: 8080
-      targetPort: 8080
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
       protocol: TCP
-      name: 8080-tcp
+      name: {{ .Values.service.port }}-tcp
   selector:
     {{- include "helloworld-chart.selectorLabels" . | nindent 4 }}
