Added config map

--- a/helloworld-chart/templates/deployment.yaml
+++ b/helloworld-chart/templates/deployment.yaml
@@ -32,5 +32,8 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: {{ include "helloworld-chart.fullname" . }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
