changed health check endpoints to /actuator/health

--- a/helloworld-chart/readiness-http.yaml
+++ b/helloworld-chart/readiness-http.yaml
@@ -13,7 +13,7 @@ spec:
     httpGet:
     # host: my-host 
     # scheme: HTTPS 
-      path: /api/hello
+      path: /actuator/health
       port: 8080
     initialDelaySeconds: 15  
     timeoutSeconds: 1  
