--- a/helloworld-chart/values.yaml
+++ b/helloworld-chart/values.yaml
@@ -60,7 +60,7 @@ configmap:
   greeting: "Greetings to the"
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
