parameterize and add conditions to deployment.yaml

--- a/helloworld-chart/templates/deployment.yaml
+++ b/helloworld-chart/templates/deployment.yaml
@@ -35,6 +35,7 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "helloworld-chart.fullname" . }}
+          {{- if .Values.livenessProbe.enabled }}
           livenessProbe:
             initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
@@ -42,8 +43,10 @@ spec:
             successThreshold: {{ .Values.livenessProbe.successThreshold }}
             failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
             httpGet:
-              path: /actuator/health
+              path: {{ .Values.handlerPath }}
               port: http
+          {{- end }}
+          {{- if .Values.readinessProbe.enabled }}
           readinessProbe:
             initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
@@ -51,7 +54,8 @@ spec:
             successThreshold: {{ .Values.readinessProbe.successThreshold }}
             failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
             httpGet:
-              path: /actuator/health
+              path: {{ .Values.handlerPath }}
               port: http
+          {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
