changes made to values.yaml

--- a/helloworld-chart/values.yaml
+++ b/helloworld-chart/values.yaml
@@ -36,6 +36,8 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+handlerPath: /actuator/health
+
 livenessProbe:
   enabled: true
   initialDelaySeconds: 120
