--- a/helloworld-chart/templates/ingress.yaml
+++ b/helloworld-chart/templates/ingress.yaml
@@ -1,14 +1,14 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: example
+  name: {{ include "helloworld-chart.fullname" . }}
   namespace: fola-helm-tg
 spec:
   rules:
-    - host: charts-example.local
+    - host: "{{ .Values.ingress.host }}.{{ .Values.domain }}"
       http:
         paths:
-          - path: /api/hello
+          - path: /
             backend:
               serviceName:  {{ include "helloworld-chart.fullname" . }}
               servicePort: 8080
