--- a/helloworld-chart/templates/ingress.yaml
+++ b/helloworld-chart/templates/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ include "helloworld-chart.fullname" . }}
-  namespace: fola-helm-tg
+  namespace: {{ .Release.Namespace }}
 spec:
   rules:
     - host: "{{ .Values.ingress.host }}.{{ .Values.domain }}"
