--- a/helloworld-chart/values-qa.yaml
+++ b/helloworld-chart/values-qa.yaml
@@ -59,15 +59,7 @@ service:
   port: 8080
 
 configmap:
-  greeting: "This is the dev environment!"
-
-ingress:
-  enabled: true
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  host: fuseapp-example
-  tls: []
+  greeting: "This is the QA environment!"
 
   #  - secretName: chart-example-tls
   #    hosts:
